--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -6,19 +6,18 @@ output:
   pdf_document : 
     number_sections: TRUE
     toc : TRUE 
+editor_options:
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
 ```{r echo=FALSE,results='hide',,warning=FALSE,message=FALSE}
 # Chargement des pakages nécessaires
 require("anyLib")
 anyLib(c("tidyverse", "cowplot", "R2jags", "lme4", "gtsummary", "plyr"))
 ```
-
 
 ```{r echo=FALSE,results='hide'}
 # Importation du fichier 
@@ -36,35 +35,67 @@ gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", str
 
 ## La variable à expliquer
 
-La variable d'intérêt à expliquer, est `Shells`, soit le nombre de carapaces de 
-tortues récentes trouvées lors des relevés sur le terrain. Cette variable est un proxy pour estimer le nombre de tortues mortes d'une année sur l'autre.
+La variable d'intérêt à expliquer, est `Shells`, soit le nombre de
+carapaces de tortues récentes trouvées lors des relevés sur le terrain.
+Cette variable est un proxy pour estimer le nombre de tortues mortes
+d'une année sur l'autre.
 
 ## Les variables explicatives
-- `Prev` est une variable explicative qualitative qui correspond à la prévalence pour *Mycoplasma agassizii*, soit le rapport entre le nombre de tortues séropositives sur l'effectif total de tortues par année pour chaque site. 
 
-- `Site` est une variable qualitative qui correspond au site d'échantillonnage. Elle a 10 modalités : 
-le parc national *Big Shoals (BS)*, l'aire de gestion de la faune sauvage *Camp Blanding (CB)*, l'aire de gestion de la faune sauvage et de l'environnement *Cecil Field/Branan Field (CF)*, une *propriété privé en Floride centrale (CE)*, le parc national *Fort Cooper (FC)*, l'aire de gestion de la faune sauvage *Flying Eagle (FE)*, le parc national *Gold Head Branch (GH)*, l'aire de gestion de la faune sauvage et de l'environnement *Perry Oldenburg (OL)*,la station biologique *Ordway-Swisher (OR)*, l'aire de gestion de la pêche *Tenoroc Fish (TE)*.
+-   `Prev` est une variable explicative qualitative qui correspond à la
+    prévalence pour *Mycoplasma agassizii*, soit le rapport entre le
+    nombre de tortues séropositives sur l'effectif total de tortues par
+    année pour chaque site.
 
-- `Area` est une variable quantitative qui correspond à l'aire couverte par site lors des relevés. 
+-   `Site` est une variable qualitative qui correspond au site
+    d'échantillonnage. Elle a 10 modalités : le parc national *Big
+    Shoals (BS)*, l'aire de gestion de la faune sauvage *Camp Blanding
+    (CB)*, l'aire de gestion de la faune sauvage et de l'environnement
+    *Cecil Field/Branan Field (CF)*, une *propriété privé en Floride
+    centrale (CE)*, le parc national *Fort Cooper (FC)*, l'aire de
+    gestion de la faune sauvage *Flying Eagle (FE)*, le parc national
+    *Gold Head Branch (GH)*, l'aire de gestion de la faune sauvage et de
+    l'environnement *Perry Oldenburg (OL)*,la station biologique
+    *Ordway-Swisher (OR)*, l'aire de gestion de la pêche *Tenoroc Fish
+    (TE)*.
 
-- `Year` est une variable qualitative qui correspond à l'année pour laquelle les relevés ont été faits. Elle a 3 modalités : 2004, 2005, 2006. 
+-   `Area` est une variable quantitative qui correspond à l'aire
+    couverte par site lors des relevés.
+
+-   `Year` est une variable qualitative qui correspond à l'année pour
+    laquelle les relevés ont été faits. Elle a 3 modalités : 2004, 2005,
+    2006.
 
 ## Exploration des données
 
-Nous regardons un résumé statistique des variables de notre jeu de donnée. 
+Nous regardons un résumé statistique des variables de notre jeu de
+donnée.
+
 ```{r echo=FALSE}
 summary(gopher)
 ```
-Nous avons un plan d'expérience équilibré avec un même nombre d'observations par site et par année.\newline 
 
-Pour la prevalence `prev` la moyenne est supérieure à la médiane, c'est-à-dire que plus de 50% des valeurs sont inférieures à la moyenne. Il en est de même pour le nombre de carapces `shells`. De plus, pour la prévalence, la différence entre le troisème quartile et le minimum est d'environ 40, tout comme la différence entre le maximum et le 3ème quartile. Ainsi, la gamme de valeurs prise par 25% des données est égales à celle prise par 75% des données.
-Pour le nombre de carapaces, la gamme de valeurs prise par 25% des données est plus de trois fois supérieur à celle prise par 75% des données. Ceci est illustré par les *figures 1 et 2*. 
+Nous avons un plan d'expérience équilibré avec un même nombre
+d'observations par site et par année.\newline 
+
+Pour la prevalence `prev` la moyenne est supérieure à la médiane,
+c'est-à-dire que plus de 50% des valeurs sont inférieures à la moyenne.
+Il en est de même pour le nombre de carapces `shells`. De plus, pour la
+prévalence, la différence entre le troisème quartile et le minimum est
+d'environ 40, tout comme la différence entre le maximum et le 3ème
+quartile. Ainsi, la gamme de valeurs prise par 25% des données est
+égales à celle prise par 75% des données. Pour le nombre de carapaces,
+la gamme de valeurs prise par 25% des données est plus de trois fois
+supérieur à celle prise par 75% des données. Ceci est illustré par les
+*figures 1 et 2*.
 
 ```{r echo=FALSE}
 F1<-ggplot(data=gopher, aes(x=prev)) + 
   geom_histogram(bins=10, fill="blue", color="black") +
-  geom_vline(aes(xintercept=mean(prev)))+
-  geom_vline(aes(xintercept=median(prev)))+
+  geom_vline(aes(xintercept=mean(prev)), col = "red") +
+  geom_label(aes(x=mean(prev), y=4, label="Mean"), col="red") +
+  geom_vline(aes(xintercept=median(prev)), col = "blue") +
+  geom_label(aes(x=median(prev), y=6, label="Median"), col="blue")
   labs(caption = "Figure 1 : Distribution de la prévalence pour Mycoplasma agassizii",
        x="Prévalence pour Mycoplasma agassizii",
        y="Comptage") +
@@ -81,7 +112,9 @@ plot_grid(nrow=1,ncol=2,
           F1,
           F2)
 ```
-La distribution du nombre de carapaces ressemble à une distribution de Poisson.
+
+La distribution du nombre de carapaces ressemble à une distribution de
+Poisson.
 
 La figure 3 donne plusieurs informations sur notre jeu de données.
 
@@ -94,18 +127,44 @@ ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
        y= "Nombre de carapaces ") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
-Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en fonction des années et cette variation n'est pas la même en fonction des sites. Le nombre de carapaces récentes par rapport à l'année précédente reste constante augmente ou diminue. On observe des évolutions différentes pour les sites : on observe une diminution du nombre de carapaces pour le site CF sur les trois ans ou un changement de tendance se traduisant par une diminution puis une augmentation pour le site CB.\newline
-Ensuite, la prévalence en fonction des sites peut également varier en fonction des années. Comme précédemment, cette variation n'est pas la même en fonction des sites. La prévalence reste constante, augmente ou diminue. La variation peut être globale sur les trois année d'étude (augmentation de la prévalence pour le site Old) ou changer (augmentation puis diminution pour le site Cent). 
-Lorsque le prevalence augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de carapaces récentes trouvées l'année suivante augmente `shells[n+2]>shells[n+1]` (sites CB, Old), et inversement (sites CF).\newline
-Ainsi, les variations du nombre de carapaces récentes trouvées pourrait être expliquée par les variations de la prévalence.
 
-Il apparaît également que certains sites ont de faibles prévalences (BS, Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF, GH, TE). Ceci concourt avec les observations faites précedemments avec le résumé de la variable `prev` et la distribution de la prévalence. Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible ou forte prévalence. Cette variables sera donc traitée de deux manières : de manière continue et de manière discontinue avec deux catégories : 
-    - faible prévalence (0) : `Prev` < 0.25 
-    - haute prévalence (1) : `Prev` > 0.25
+Tout d'abord, le nombre de carapaces récentes trouvées varie ou non en
+fonction des années et cette variation n'est pas la même en fonction des
+sites. Le nombre de carapaces récentes par rapport à l'année précédente
+reste constante augmente ou diminue. On observe des évolutions
+différentes pour les sites : on observe une diminution du nombre de
+carapaces pour le site CF sur les trois ans ou un changement de tendance
+se traduisant par une diminution puis une augmentation pour le site
+CB.\newline Ensuite, la prévalence en fonction des sites peut également
+varier en fonction des années. Comme précédemment, cette variation n'est
+pas la même en fonction des sites. La prévalence reste constante,
+augmente ou diminue. La variation peut être globale sur les trois année
+d'étude (augmentation de la prévalence pour le site Old) ou changer
+(augmentation puis diminution pour le site Cent). Lorsque le prevalence
+augmente d'une année à l'autre `prev[n] < prev[n+1]`, le nombre de
+carapaces récentes trouvées l'année suivante augmente
+`shells[n+2]>shells[n+1]` (sites CB, Old), et inversement (sites
+CF).\newline Ainsi, les variations du nombre de carapaces récentes
+trouvées pourrait être expliquée par les variations de la prévalence.
 
+Il apparaît également que certains sites ont de faibles prévalences (BS,
+Ord, FE) quelque soit l'année et d'autres des prévalences élevées (CF,
+GH, TE). Ceci concourt avec les observations faites précedemments avec
+le résumé de la variable `prev` et la distribution de la prévalence.
+Ainsi, nous pourrons séparer les sites en deux catégories, ceux à faible
+ou forte prévalence. Cette variables sera donc traitée de deux manières
+: de manière continue et de manière discontinue avec deux catégories : -
+faible prévalence (0) : `Prev` \< 0.25 - haute prévalence (1) : `Prev`
+\> 0.25
 
-Nous allons donc essayer de déterminer si la prévalence et l'année permettent d'expliquer les variations du nombre de carapaces. 
-Nous avons vu que la prévalence et le nombre de carapaces trouvées diffère entre les sites et entre les années. Afin de pouvoir nous concentrer sur l'effet de la prévalence, nous allons mettre un effet aléatoire sur la variable `Site`. Nous pourrions faire de même pour la variable `Année` mais par souci de simplification, nous allons garder cette variable en effet fixe.
+Nous allons donc essayer de déterminer si la prévalence et l'année
+permettent d'expliquer les variations du nombre de carapaces. Nous avons
+vu que la prévalence et le nombre de carapaces trouvées diffère entre
+les sites et entre les années. Afin de pouvoir nous concentrer sur
+l'effet de la prévalence, nous allons mettre un effet aléatoire sur la
+variable `Site`. Nous pourrions faire de même pour la variable `Année`
+mais par souci de simplification, nous allons garder cette variable en
+effet fixe.
 
 ```{r echo=FALSE}
 area_site <- gopher$Area %>% 
@@ -122,30 +181,43 @@ ggplot(shells_area,aes(x=area_site, y=shells_mean, color=Sites)) +
        y = "Nombre moyen de carapaces") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
-D'après la *figure 4* les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site. 
 
-D'après les observations faites précedemment, nous souhaitons donc déterminer si : 
-- le nombre de carapaces récentes trouvées est correlée avec la prevalence pour *Mycoplasma agassizii* pour une année donnée.
-- le nombre de carapces récentes trouvées est plus grand dans les sites à haute prévalence par rapport aux sites à basse prévalence.
+D'après la *figure 4* les sites n'ont pas tous la même aire et il semble
+qu'un plus grand nombre de carapces sont trouvés sur les sites avec une
+plus grande aire. Afin de pourvoir comparer les sites entre eux, nous
+allons prendre le rapport entre le nombre de carapaces trouvées par site
+et l'aire du site.
 
+D'après les observations faites précedemment, nous souhaitons donc
+déterminer si : - le nombre de carapaces récentes trouvées est correlée
+avec la prevalence pour *Mycoplasma agassizii* pour une année donnée. -
+le nombre de carapces récentes trouvées est plus grand dans les sites à
+haute prévalence par rapport aux sites à basse prévalence.
 
 # **Ajustement d'un modèle simple**
 
-Nous commençons par un modèle simple `M1` en considérant uniquement l'effet de la prévalence sur le nombre de carapces récentes trouvées. 
+Nous commençons par un modèle simple `M1` en considérant uniquement
+l'effet de la prévalence sur le nombre de carapces récentes trouvées.
 
-L'équation (approche fréquentiste) du modèle linéaire simple est la manière suivante : \newline 
-$$\frac {shells} {aire_{site}} = \mu_0 + \beta * prev$$
-Ceci se traduit en approche bayesienne par un modèle considérant les hypothèses suivantes :
+L'équation (approche fréquentiste) du modèle linéaire simple est la
+manière suivante : \newline 
+$$\frac {shells} {aire_{site}} = \mu_0 + \beta * prev$$ Ceci se traduit
+en approche bayesienne par un modèle considérant les hypothèses
+suivantes :
 
-- `shells` suit un loi de poisson de paramètre $\lambda$ (*cf figure 2*), c'est-à-dire que c'est une variable discrète de comptage dans un intervale de temps et un espace donnés ; avec une variance égale à la moyenne $E(shells)=V(shells)= \lambda$
-- toutes les observations de `shells` sont **indépendantes**
-- le logarithme de la moyenne de `shells` peut être exprimée comme la combinaison linéaire des variables explicatives sélectionnées.
-- que les paramètres à estimer (ordonnée à l'origine et coefficients de regression) suivent des lois connues, explicités ci-après.
+-   `shells` suit un loi de poisson de paramètre $\lambda$ (*cf figure
+    2*), c'est-à-dire que c'est une variable discrète de comptage dans
+    un intervale de temps et un espace donnés ; avec une variance égale
+    à la moyenne $E(shells)=V(shells)= \lambda$
+-   toutes les observations de `shells` sont **indépendantes**
+-   le logarithme de la moyenne de `shells` peut être exprimée comme la
+    combinaison linéaire des variables explicatives sélectionnées.
+-   que les paramètres à estimer (ordonnée à l'origine et coefficients
+    de regression) suivent des lois connues, explicités ci-après.
 
 Nous avons donc :
-$$Shells_i\:\stackrel{i.i.d}{\sim} \: Pois(\lambda_i)\:avec\:i=1,..30\:le\:nombre\:d'observations$$  
-$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i$$ 
-\newline 
+$$Shells_i\:\stackrel{i.i.d}{\sim} \: Pois(\lambda_i)\:avec\:i=1,..30\:le\:nombre\:d'observations$$\
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i$$ \newline 
 Nous utilisons comme priors les distribution suivantes : \newline 
 $$\mu_0\:{\sim}\:\mathcal{N}(0, 100)$$
 $$\beta\:{\sim}\:\mathcal{N}(0, 100)$$
@@ -201,14 +273,19 @@ M1 <- jags(
 M1
 ```
 
-Nous vérifions que le modèle a bien convergé. 
+Nous vérifions que le modèle a bien convergé.
 
 ```{r echo=FALSE}
 # Regardons les traces
 traceplot(M1,mfrow = c(1, 3), varname = c('mu.0','b.prev','deviance'), ask = FALSE)
 par(mfrow=c(1, 1))
 ```
-Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est aussi confirmé par la statistique de Gelman-Rubin  $\hat{R}$ qui est inférieure à 1.1 pour chaque paramètre estimé. Nous notons aussi que `n.eff` est supérieur à 100. Nous avons donc des estimations de nos paramètres qui sont stables et des chaines peu autocorrélées. 
+
+Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est
+aussi confirmé par la statistique de Gelman-Rubin $\hat{R}$ qui est
+inférieure à 1.1 pour chaque paramètre estimé. Nous notons aussi que
+`n.eff` est supérieur à 100. Nous avons donc des estimations de nos
+paramètres qui sont stables et des chaines peu autocorrélées.
 
 ```{r echo=FALSE}
 # On récupère les résultats et on fait des histogrammes
@@ -224,10 +301,7 @@ hist(shells1)
 mean(shells1)
 ```
 
-shells1 <- shells1 %>% 
-  as.matrix(ncol=1) %>% 
-  as.data.frame() %>% 
-  rename(shells=x)
+Les valeurs estimées du modèle se prettent assez bien à prédire la distribution du nombre de carapaces. Regardons ce qu'il en est sur le nombre de carapaces en fonction de la prévalence en fonction du site et de l'année.
 
 ```{r echo=FALSE}
 mean_mu1 <- mean(res1$mu.0)
@@ -242,22 +316,38 @@ ggplot(gopher, aes(x=prev, y=shells)) +
        y= "Nombre de carapaces ") +
   theme(plot.caption = element_text(hjust = 0, face = "italic", size = 12))
 ```
-Notre modèle `M1` prédit bien la distribution des carapaces mais elle ne prend pas en compte la variabilité des sites comme le montre les droites de regressions construites à partir de le moyenne de distributions postérieures de nos paramètres (*cf. figure 5*). 
 
-Comme vu dans la partie 1, le nombre de carapace varie en fonction de l'année et du site. Nous allons donc ajuster différents modèles qui prennent en compte ces deux variables individuellement ou en les combinant. 
+Notre modèle `M1` prédit bien la distribution des carapaces mais elle ne
+prend pas en compte la variabilité des sites comme le montre les droites
+de regressions construites à partir de le moyenne de distributions
+postérieures de nos paramètres (*cf. figure 5*).
+
 ```{r echo=FALSE}
 # On récupère le DIC
 DIC1 <- M1$BUGSoutput$DIC
 ```
+
 # **Comparaison de modèles**
 
-Une analyse statistique passe toujours par l'ajustement d'un premier modèle simple. Commencez par décrire le modèle qui vous semble pertinent pour répondre à une des questions traitées dans l'article, en vous aidant d'équations ou pas, et en justifiant son utilisation. Rappelez les hypothèses sur lesquelles repose le modèle. Notez qu'il ne vous est pas demandé de vérifier la validité de ces hypothèses (l'analyse des résidus). Vous pouvez ignorer les effets aléatoires sur les pentes (slopes) et ne considérer que des modèles avec un effet aléatoire sur l'ordonnée à l'origine (intercept).
+En vous aidant de l'article, formez quelques hypothèses et construirez
+les modèles correspondant. Ajustez et comparez ces modèles pour
+déterminer l'hypothèse la mieux supportée par les données. N'oubliez de
+standardiser les variables explicatives continues avec la fonction
+scale() de R par exemple. Dans le cas d'une variable année, la
+standardisation est un peu différente, n'utilisez pas la fonction
+scale(). Si year \<- c(2006, 2007, ... 2021) par exemple, utilisez
+simplement la variable year - 2005 qui vaut (1, 2, .... 16) pour avoir
+toujours une variable entière, mais qui commence à 1 et ne prend plus de
+grandes valeurs.
 
-En vous aidant de l'article, formez quelques hypothèses et construirez les modèles correspondant. Ajustez et comparez ces modèles pour déterminer l'hypothèse la mieux supportée par les données. N'oubliez de standardiser les variables explicatives continues avec la fonction scale() de R par exemple. Dans le cas d'une variable année, la standardisation est un peu différente, n'utilisez pas la fonction scale(). Si year <- c(2006, 2007, ... 2021) par exemple, utilisez simplement la variable year - 2005 qui vaut (1, 2, .... 16) pour avoir toujours une variable entière, mais qui commence à 1 et ne prend plus de grandes valeurs.
+Comme vu dans la partie 1, le nombre de carapace varie en fonction de
+l'année et du site. Nous allons donc ajuster différents modèles qui
+prennent en compte ces deux variables individuellement ou en les
+combinant.
 
+Le modèle null `M0` : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0$$
 
-Le modèle null `M0`  : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0$$
-```{r}
+```{r echo=FALSE}
 # The null model function
 null_model <- function(){
   # The null model does not take into account any of the variables. We just want to see the evolution of the number of shells
@@ -301,32 +391,14 @@ M0 <- jags(
   n.thin = 1
 )
 
-M0
-
-# Evaluons la convergence du modèle
-traceplot(M1, mfrow=c(1, 2), ask=FALSE)
-par(mfrow = c(1, 1))
-
-# On récupère les paramètres et on regarde leur distribution
-res0 <- M1$BUGSoutput$sims.matrix %>% 
-  as.data.frame()
-hist(res0$mu.0)
-
-# Rétrotransformation
-shells0 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res0))
-for (i in 1:nrow(gopher)){
-  shells0[,i] <-gopher$Area[i] * exp(res0$mu.0)
-}
-hist(shells0)
-mean(shells0)
-
 # Récupérons le DIC
 DIC0 <- M0$BUGSoutput$DIC
 ```
 
+Un modèle avec uniquement l'année `M3` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}$$
 
-Un modèle avec uniquement l'année `M3`  : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}$$
-```{r}
+```{r echo=FALSE}
 # The year model function
 year_model <- function(){
   # This model takes into account the variable year with it's 3 modalities.
@@ -375,34 +447,14 @@ M3 <- jags(
   n.burnin = nb.burnin,
   n.thin = 1
 )
-
-M3
-
-traceplot(M3, mfrow=c(1, 3), ask=FALSE)
-par(mfrow = c(1, 1))
-
-res3 <- M3$BUGSoutput$sims.matrix %>% 
-  as.data.frame()
-hist(res3$mu.0)
-hist(res3$alpha_0)
-hist(res3$alpha_1)
-hist(res3$alpha_2)
-
-# Rétrotransformation
-shells3 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res3))
-for (i in 1:nrow(gopher)){
-  shells3[,i] <-gopher$Area[i] * exp(res3$mu.0 + res3$alpha_0 * gopher$Cov_2004[i] + res3$alpha_1 * gopher$Cov_2005[i] + res3$alpha_2 * gopher$Cov_2006[i])
-}
-hist(shells3)
-mean(shells3)
-
 # Récupérons le DIC
 DIC3 <- M3$BUGSoutput$DIC
 ```
 
-Un modèle avec l'année et la prévalence (continue) `M4`  : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006} + \beta * prev_i $$
+Un modèle avec l'année et la prévalence (continue) `M4` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006} + \beta * prev_i $$
 
-```{r}
+```{r echo=FALSE}
 # The year model function
 year_prevalence_model <- function(){
   # This model takes into account the variable year with it's 3 modalities.
@@ -454,32 +506,12 @@ M4 <- jags(
   n.thin = 1
 )
 
-M4
-
-traceplot(M4, mfrow=c(2, 3), ask=FALSE)
-par(mfrow = c(1, 1))
-
-res4 <- M4$BUGSoutput$sims.matrix %>% 
-  as.data.frame()
-hist(res4$mu.0)
-hist(res4$alpha_0)
-hist(res4$alpha_1)
-hist(res4$alpha_2)
-
-# Rétrotransformation
-shells4 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res4))
-names(res4)
-for (i in 1:nrow(gopher)){
-  shells4[,i] <-gopher$Area[i] * exp(res4$mu.0 + res4$alpha_0 * gopher$Cov_2004[i] + res4$alpha_1 * gopher$Cov_2005[i] + res4$alpha_2 * gopher$Cov_2006[i] + res4$b.prev)
-}
-hist(shells4)
-mean(shells4)
-
 # Récupérons le DIC
 DIC4 <- M4$BUGSoutput$DIC
 ```
 
-Modèle avec année et site `M5` : $$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}+ \gamma_j\:\:avec\:\:j=1,...,10$$
+Modèle avec année et site `M5` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}+ \gamma_j\:\:avec\:\:j=1,...,10$$
 
 ```{r}
 year_site_model <- function(){
@@ -553,40 +585,298 @@ M5 <- jags(
   n.thin = 1
 )
 
-# Regardons le modèle et les traces
-M5
-traceplot(M5, mfrow=c(2, 3), ask=FALSE)
-par(mfrow=c(1, 1))
-
-# On récupère les paramètres et on regarde leur distribution
-res5 <- M5$BUGSoutput$sims.matrix %>% 
-  as.data.frame()
-hist(res5$mu.0)
-hist(res5$alpha_0)
-hist(res5$alpha_1)
-hist(res5$alpha_2)
-hist(res5$sd.s)
-
-# Rétrotransformation
-
-shells5 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res5))
-for (i in 1:nrow(gopher)){
-  shells5[,i] <-gopher$Area[i] * exp(res5$mu.0 + res5$alpha_0 * gopher$Cov_2004[i] + res5$alpha_1 * gopher$Cov_2005[i] + res5$alpha_2 * gopher$Cov_2006[i] +rnorm(1,mean=0, sd=res5$sd.s))
-}
-hist(shells5)
-mean(shells5)
-
 # Récupérons le DIC
 DIC5 <- M5$BUGSoutput$DIC
 ```
+Modèle avec année et site et la prévalence`M6` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \alpha_0 * cov_{2004}+\alpha_1 * cov_{2005} +\alpha_2 * cov_{2006}+ \gamma_j + \beta * prev_i\:\:avec\:\:j=1,...,10$$
+```{r}
+random_model <- function(){
+  # This model takes into account a random effect for the site
+  # Likelihood
+  for(i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + gamma[site[i]] + b.prev * prev[i] + alpha_0* Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
+  }
+  for (j in 1:nb.sites){
+    gamma[j] ~ dnorm(0, tau.s)
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 0.001)
+  sd.s ~ dunif(0, 100)
+  tau.s <- 1 / (sd.s * sd.s)
+  b.prev ~ dnorm(0, 1/100)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+} 
 
-Partir directement avec les effets aléatoires (prendre en compte la structuration des données)
+# Make the data to use in jags
+datax <- list(
+  N = gopher$year %>% 
+    length(),
+  S = gopher$shells,
+  prev = gopher$standprev,
+  A = gopher$Area,
+  site = gopher$Site %>% 
+    as.numeric(),
+  nb.sites = gopher$Site %>% 
+    unique() %>% 
+    length(),
+  Cov_2004 = ifelse(gopher$year == 2004, 1, 0),
+  Cov_2005 = ifelse(gopher$year == 2005, 1, 0),
+  Cov_2006 = ifelse(gopher$year == 2006, 1, 0)
+)
+
+# Make a list of parameters to save
+params = c("mu.0", "b.prev", "sd.s","alpha_0", "alpha_1", "alpha_2")
+
+# Initial conditions
+init1 <- list(
+  "mu.0" = 0.5,
+  "b.prev" = 0.5,
+  "alpha_0" = 0.5,
+  "alpha_1" = 0.5,
+  "alpha_2" = 0.5,
+  "sd.s" = 0.5
+)
+init2 <- list(
+  "mu.0" = - 0.5,
+  "b.prev" = - 0.5,
+  "alpha_0" = -0.5,
+  "alpha_1" = -0.5,
+  "alpha_2" = -0.5,
+  "sd.s" = 1.5
+)
+init <- list(init1, init2)
+
+# Iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+
+# Run the model
+M6 <- jags(
+  data = datax,
+  parameters.to.save = params,
+  inits = init,
+  model.file = random_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+# Récupérons le DIC
+DIC6 <- M6$BUGSoutput$DIC
+
+```
+Modèle avec la prévalence (discontinue) `M7` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * disc\_prev_i\:\:avec\:\:j=1,...,10$$
+```{r}
+gopher_discont_prev <- function(){
+  for (i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + b.prev * prev[i] + log(A[i])
+  }
+  mu.0 ~ dnorm(0, 0.001)
+  b.prev ~ dnorm(0, 0.001)
+}
+
+datax <- list(N = length(gopher$shells),
+              prev = gopher$H,
+              S = gopher$shells,
+              A = gopher$Area
+)
+
+init1 <- list(mu.0=0.5, b.prev=0.5)
+init2 <- list(mu.0= -0.5, b.prev= -0.5)
+inits <- list(init1, init2)
+
+params <- c("mu.0", "b.prev")
+
+nb.iterations <- 9000
+nb.burnin <- 4500
+
+M7 <- jags(data=datax,
+           inits=inits,
+           parameters.to.save = params,
+           model.file=gopher_discont_prev,
+           n.chains = 2,
+           n.iter = nb.iterations,
+           n.burnin = nb.burnin,
+           n.thin=1
+)
+
+# Récupérons le DIC
+DIC7 <- M7$BUGSoutput$DIC
+```
+
+Modèle avec l'année et la prévalence (discontinue) `M8` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * disc\_prev_i + \alpha_0 * Cov_{2004} + \alpha_1 * Cov_{2005} + \alpha_2*Cov_{2006}$$
+```{r}
+disc_year_prev_model <- function(){
+  # This model takes into account a random effect for the site
+  # Likelihood
+  for(i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + b.prev * prev[i] + alpha_0 * Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 1/100)
+  b.prev ~ dnorm(0, 1/100)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+}
+
+# Make the data to use in jags
+datax <- list(
+  N = gopher$year %>% 
+    length(),
+  S = gopher$shells,
+  prev = gopher$H,
+  A = gopher$Area,
+  Cov_2004 = gopher$Cov_2004, 
+  Cov_2005 = gopher$Cov_2005,
+  Cov_2006 = gopher$Cov_2006
+)
+
+# Make a list of parameters to save
+params = c("mu.0", "b.prev", "alpha_0", "alpha_1", "alpha_2")
+
+# Initial conditions
+init1 <- list(
+  "mu.0" = 0.5,
+  "b.prev" = 0.5,
+  "alpha_0" = 0.5,
+  "alpha_1" = 0.5,
+  "alpha_2" = 0.5
+)
+init2 <- list(
+  "mu.0" = - 0.5,
+  "b.prev" = - 0.5,
+  "alpha_0" = -0.5,
+  "alpha_1" = -0.5,
+  "alpha_2" = -0.5
+)
+init <- list(init1, init2)
+
+# Iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+
+# Run the model
+M8 <- jags(
+  data = datax,
+  parameters.to.save = params,
+  inits = init,
+  model.file = disc_year_prev_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+# Récupérons le DIC
+DIC8 <- M8$BUGSoutput$DIC
+```
+
+Modèle avec l'année, le site et la prévalence (discontinue) `M9` :
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * disc\_prev_i + \alpha_0 * Cov_{2004} + \alpha_1 * Cov_{2005} + \alpha_2*Cov_{2006} + \gamma_j \:\: avec j = 1,...,10$$
+```{r}
+disc_full_model <- function(){
+  # This model takes into account a random effect for the site
+  # Likelihood
+  for(i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + alpha.s[site[i]] + b.prev * prev[i] + alpha_0 * Cov_2004[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 1/100)
+  b.prev ~ dnorm(0, 1/100)
+  for (j in 1:nb.sites){
+    alpha.s[j] ~ dnorm(0, tau.s)
+  }
+  tau.s <- 1 / (sd.s * sd.s)
+  sd.s ~ dunif(0, 100)
+  alpha_0 ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+}
+
+# Make the data to use in jags
+datax <- list(
+  N = gopher$year %>% 
+    length(),
+  S = gopher$shells,
+  prev = gopher$H,
+  A = gopher$Area,
+  site = gopher$Site %>% 
+    as.numeric(),
+  nb.sites = gopher$Site %>% 
+    unique() %>% 
+    length(),
+  Cov_2004 = gopher$Cov_2004,
+  Cov_2005 = gopher$Cov_2005,
+  Cov_2006 = gopher$Cov_2006
+)
+
+# Make a list of parameters to save
+params = c("mu.0", "b.prev", "sd.s", "alpha_0", "alpha_1", "alpha_2")
+
+# Initial conditions
+init1 <- list(
+  "mu.0" = 0.5,
+  "b.prev" = 0.5,
+  "sd.s" = 0.5,
+  "alpha_0" = 0.5,
+  "alpha_1" = 0.5,
+  "alpha_2" = 0.5
+)
+init2 <- list(
+  "mu.0" = - 0.5,
+  "b.prev" = - 0.5,
+  "sd.s" =  0.25,
+  "alpha_0" = -0.5,
+  "alpha_1" = -0.5,
+  "alpha_2" = -0.5
+)
+init <- list(init1, init2)
+
+# Iteration parameters
+nb.iterations <- 9000
+nb.burnin <- 4500
+
+# Run the model
+M9 <- jags(
+  data = datax,
+  parameters.to.save = params,
+  inits = init,
+  model.file = disc_full_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1
+)
+
+# Récupérons le DIC
+DIC9 <- M9$BUGSoutput$DIC
+```
+
+Partir directement avec les effets aléatoires (prendre en compte la
+structuration des données)
 
 # **Inférence et interprétation des résultats**
-Sur la base du meilleur modèle, donnez les estimations des paramètres ainsi qu'une mesure de l'incertitude associée. Interprétez vos résultats.
+
+Sur la base du meilleur modèle, donnez les estimations des paramètres
+ainsi qu'une mesure de l'incertitude associée. Interprétez vos
+résultats.
 
 # **Discussion**
-Comparez vos résultats à ceux du papier. Sont-ils semblables ou différents? Pourquoi selon vous? Si cela vous semble pertinent, proposez des pistes d'amélioration de l'analyse.
+
+Comparez vos résultats à ceux du papier. Sont-ils semblables ou
+différents? Pourquoi selon vous? Si cela vous semble pertinent, proposez
+des pistes d'amélioration de l'analyse.
 
 ```{r}
 random_model <- function(){
@@ -691,4 +981,5 @@ mean(shells6)
 # Récupérons le DIC
 DIC6 <- M6$BUGSoutput$DIC
 ```
+
 
